added/changed the copywrite language in footer.html

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -20,10 +20,12 @@
                         <a class="page-scroll" href="#contact">Contact</a>
                     </li>
                 </ul>
-                <p class="copyright text-muted small">Copyright &copy; {{ .Title }} All Rights Reserved</p>
+                <p class="copyright text-muted small"> 
+                <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-sa/4.0/88x31.png" /></a><br /><span xmlns:dct="http://purl.org/dc/terms/" property="dct:title">www.gusdunn.com</span> by <a xmlns:cc="http://creativecommons.org/ns#" href="https://github.com/gusdunn/gusdunn.github.io" property="cc:attributionName" rel="cc:attributionURL">Gus Dunn</a> is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribution-ShareAlike 4.0 International License</a>.
+                </p>
             </div>
             <div class="col-md-4">
-		Built with <a href="http://gohugo.io">Hugo</a> and the
+		Built with <a href="http://gohugo.io">Hugo</a> and based on 
 		<a href="https://github.com/crakjie/landing-page-hugo">landing-page-hugo</a> 
 		theme.
             </div>
